[project]
name = "verein-app"
version = "0.1.0"
description = "Backend skeleton for club management app"
authors = [{name = "AI Assistant"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlmodel>=0.0.14",
    "pydantic-settings",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
